force-app/main/default/objects/Date_Effective_Property__c/Date_Effective_Property__c.object-meta.xml
<CustomObject>
    <description>properties of an object that cannot be managed on that object due to the need to track effective dates</description>
    <label>Date Effective Property</label>
    <nameField>
        <label>Date Effective Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Date Effective Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>