force-app/main/default/objects/Date_Effective_Property__c/fields/Divide_by_Therm_Factor__c.field-meta.xml
<CustomField>
    <fullName>Divide_by_Therm_Factor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Divide by Therm Factor</label>
    <type>Checkbox</type>
</CustomField>