force-app/main/default/objects/Date_Effective_Property__c/fields/HOU_Charge_ID__c.field-meta.xml
<CustomField>
    <fullName>HOU_Charge_ID__c</fullName>
    <label>HOU Charge ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>