force-app/main/default/objects/Date_Effective_Property__c/fields/LIVE_Charge_ID__c.field-meta.xml
<CustomField>
    <fullName>LIVE_Charge_ID__c</fullName>
    <label>LIVE Charge ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>