force-app/main/default/objects/Date_Effective_Property__c/fields/LIVE_Managed_by_External_System__c.field-meta.xml
<CustomField>
    <fullName>LIVE_Managed_by_External_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LIVE_Managed by External System</label>
    <type>Checkbox</type>
</CustomField>