force-app/main/default/objects/Date_Effective_Property__c/fields/MPLS_Charge_ID__c.field-meta.xml
<CustomField>
    <fullName>MPLS_Charge_ID__c</fullName>
    <label>MPLS Charge ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>