force-app/main/default/objects/Date_Effective_Property__c/fields/Multiply_by_Therm_Factor__c.field-meta.xml
<CustomField>
    <fullName>Multiply_by_Therm_Factor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiply by Therm Factor</label>
    <type>Checkbox</type>
</CustomField>