force-app/main/default/objects/Date_Effective_Property__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <description>specify what object this property applies to.  Blank applies to all supported objects</description>
    <inlineHelpText>specify what object this property applies to.  Blank applies to all supported objects</inlineHelpText>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Premise</fullName>
            </value>
            <value>
                <fullName>Not Currently Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>