force-app/main/default/objects/Date_Effective_Property__c/fields/Safari_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Safari_Data_Type__c</fullName>
    <label>Safari Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lookup</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>