force-app/main/default/objects/Date_Effective_Property__c/fields/Safari_Name__c.field-meta.xml
<CustomField>
    <fullName>Safari_Name__c</fullName>
    <description>this is not used anymore.  the property value has a formula to derive this value.</description>
    <formula>IF(Name == &#39;Rate Class&#39;
  , &#39;Service Class&#39;
  , IF(Name  == &#39;Monthly Firm Demand Charge&#39;
      , &#39;Monthly Firm Demand&#39;
      , Name
    )
)</formula>
    <label>Safari Name</label>
    <type>Text</type>
</CustomField>