force-app/main/default/objects/Date_Effective_Property__c/fields/Safari_Type__c.field-meta.xml
<CustomField>
    <fullName>Safari_Type__c</fullName>
    <label>Safari Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User Field</fullName>
            </value>
            <value>
                <fullName>Utility Property</fullName>
            </value>
            <value>
                <fullName>Account Property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>