force-app/main/default/objects/Date_Effective_Property__c/fields/STL_Charge_ID__c.field-meta.xml
<CustomField>
    <fullName>STL_Charge_ID__c</fullName>
    <label>STL Charge ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>