force-app/main/default/objects/Date_Effective_Property__c/fields/Sync_HOU__c.field-meta.xml
<CustomField>
    <fullName>Sync_HOU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync_HOU</label>
    <type>Checkbox</type>
</CustomField>