force-app/main/default/objects/Date_Effective_Property__c/fields/Sync_LIVE__c.field-meta.xml
<CustomField>
    <fullName>Sync_LIVE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync_LIVE</label>
    <type>Checkbox</type>
</CustomField>