force-app/main/default/objects/Date_Effective_Property__c/fields/Sync_MPLS__c.field-meta.xml
<CustomField>
    <fullName>Sync_MPLS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync_MPLS</label>
    <type>Checkbox</type>
</CustomField>