force-app/main/default/objects/Date_Effective_Property__c/fields/Sync_STL__c.field-meta.xml
<CustomField>
    <fullName>Sync_STL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync_STL</label>
    <type>Checkbox</type>
</CustomField>