force-app/main/default/objects/Date_Effective_Property__c/listViews/Account_Properties.listView-meta.xml
<ListView>
    <fullName>Account_Properties</fullName>
    <columns>NAME</columns>
    <columns>Property_Type__c</columns>
    <columns>Data_Type__c</columns>
    <columns>Safari_Data_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Safari_Type__c</field>
        <operation>equals</operation>
        <value>Account Property</value>
    </filters>
    <label>Account Properties</label>
    <language>en_US</language>
</ListView>