force-app/main/default/objects/Date_Effective_Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property_Type__c</columns>
    <columns>Data_Type__c</columns>
    <columns>Safari_Data_Type__c</columns>
    <columns>Safari_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>