force-app/main/default/objects/Date_Effective_Property__c/listViews/Utility_Properties.listView-meta.xml
<ListView>
    <fullName>Utility_Properties</fullName>
    <columns>NAME</columns>
    <columns>Property_Type__c</columns>
    <columns>Data_Type__c</columns>
    <columns>Safari_Data_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Safari_Type__c</field>
        <operation>equals</operation>
        <value>Utility Property</value>
    </filters>
    <label>Utility Properties</label>
    <language>en_US</language>
</ListView>